--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/x-date-pickers": "^6.9.1",
     "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
