--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
-    "@mui/x-date-pickers": "^6.9.1",
     "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
+    "firebase": "^9.23.0",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
